[Cpt1_5] namespace WIP, Split header and source files
챕터1-5 진행중, 헤더파일, 소스파일 분할 연습

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,8 +123,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt1_4_inline_Function.cpp" />
+    <ClCompile Include="Adder.cpp" />
+    <ClCompile Include="Cpt1_5_namespace.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Adder.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
