--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt1_6_AccountManagementProgram.cpp">
+    <ClCompile Include="Cph2_2_Bool.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
