[Cpt 2-5] begin cpt 2-5 new & delete
챕터 2-5 시작

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt2_4_Reference_Function.cpp" />
+    <ClCompile Include="Cpt2_5_New_Delete.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
