[Cpt 2-5] Complete Question 2-3
챕터 2-5 문제 2-3 완료

--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt2_5_New_Delete.cpp">
+    <ClCompile Include="Cpt2_6_CallStdFunc.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
