--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt3_1_Structure.cpp">
+    <ClCompile Include="Cpt3_2_Class_Object.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
