--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,14 +123,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt3_2_Ex_Car.cpp" />
-    <ClCompile Include="Cpt3_2_Class_Object.cpp" />
-    <ClCompile Include="Cpt3_2_Q1_Calculator.cpp" />
+    <ClCompile Include="Cpt3_3_OOP.cpp" />
     <ClCompile Include="Source.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Cpt3_2_Ex_Car.h" />
-    <ClInclude Include="Cpt3_2_Q1_Calculator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
