[Cpt 4-1] Information Hiding WIP
챕터 4-1 클래스 은닉화 실습(진행중)

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,8 +123,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt3_3_OOP.cpp" />
+    <ClCompile Include="Cpt4_1_Information_Hiding.cpp" />
+    <ClCompile Include="Cpt4_1_Point.cpp" />
+    <ClCompile Include="Cpt4_1_Rectangle.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cpt4_1_Point.h" />
+    <ClInclude Include="Cpt4_1_Rectangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
