[Cpt 4-2] Encapsulation WIP
챕터 4-2 캡슐화 진행중

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,14 +123,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt4_1_Information_Hiding.cpp" />
-    <ClCompile Include="Cpt4_1_Point.cpp" />
-    <ClCompile Include="Cpt4_1_Rectangle.cpp" />
+    <ClCompile Include="Cpt4_2_Encapsulation.cpp" />
     <ClCompile Include="Source.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Cpt4_1_Point.h" />
-    <ClInclude Include="Cpt4_1_Rectangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
