--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt4_5_OOP_Project2_UpgradingAccountProgram.cpp" />
+    <ClCompile Include="Cpt5_1_CopyConstructor.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
