--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt5_1_CopyConstructor.cpp">
+    <ClCompile Include="Cpt5_2_Shallow_Deep_Copy.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
