[Cpt 6-2] Start Friend
챕터 6-2 friend 시작

--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt6_1_Const_part2.cpp">
+    <ClCompile Include="Cpt6_2_friend.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
