[Cpt 6-3] Start static in c++
챕터 6-3 C++에서의 static 시작

--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt6_2_friend.cpp">
+    <ClCompile Include="Cpt6_3_Static_in_CPP.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
