[Cpt 6-4] Complete OOP Project ver4(Add const)
챕터 6-4 OOP 프로젝트 ver4 완료(멤버함수에 const 추가)

--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt6_3_Static_in_CPP.cpp">
+    <ClCompile Include="Cpt6_4_OOP_Project4_const.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
