[Cpt 7-2] Start Understanding of Inheritance
챕터 7-2 상속의 이해 시작

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Cpt7_1_Inheritance_EmployeeManager1.cpp" />
+    <ClCompile Include="Cpt7_2_Inheritance.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
