[Cpt 7-3] WIP protected
챕터 7-3 protected 진행중

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,8 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt7_1_Inheritance_EmployeeManager1.cpp" />
-    <ClCompile Include="Cpt7_2_Inheritance.cpp" />
+    <ClCompile Include="Cpt7_3_protected.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
