[Cpt 7-4] Start condition for Inheritance
챕터 7-4 상속을 위한 조건(IS-A) 시작

--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt7_3_protected.cpp">
+    <ClCompile Include="Cpt7_4_condition_of_Inheritance.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
