--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt7_3_protected.cpp" />
+    <ClCompile Include="Cpt7_4_condition_of_Inheritance.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
