--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt8_2_Virtual_Function.cpp" />
+    <ClCompile Include="Cpt8_3_VirtualDestructor_ReferencePosibility.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
