--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt10_1_Overloading.cpp" />
+    <ClCompile Include="Cpt10_2_Unary_Operator.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
