[Cpt 12-1] Complete Standard String class
챕터 12-1 표준 string 클래스 완료

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,6 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Cpt12_1_CPP_Standard_String.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
