[Cpt 14-1] Complete Function friend define
챕터 14-1 클래스 템플릿 내 일반함수 friend 선언

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,8 +123,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt13_2_Class_Template.cpp" />
+    <ClCompile Include="Cpt14_1_Point_Array_Class_Template.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Cpt14_1_ArrayTemplate.h" />
+    <ClInclude Include="Cpt14_1_PointTemplate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
