--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt14_3_Template_Parameter.cpp">
+    <ClCompile Include="Cpt14_4_Template_Static.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
