[Cpt 15-2] WIP Exception Mechanism
챕터 15-2 예외처리 메커니즘 진행중

--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt14_4_Template_Static.cpp">
+    <ClCompile Include="Cpt15_1_2_Exception_Handling.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
