--- a/Study_CPP.vcxproj.filters
+++ b/Study_CPP.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Source.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="Cpt15_1_2_Exception_Handling.cpp">
+    <ClCompile Include="Cpt15_3_Stack_Unwinding.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
