[Cpt 15-4] Complete Exception Class
챕터 15-4 예외 클래스 완료
* 둘 이상의 catch문 실행 순서

--- a/Study_CPP.vcxproj
+++ b/Study_CPP.vcxproj
@@ -123,7 +123,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Cpt15_3_Stack_Unwinding.cpp" />
+    <ClCompile Include="Cpt15_4_Exception_Class.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
